--- a/modulo1/css-bugfixes/index.css
+++ b/modulo1/css-bugfixes/index.css
@@ -72,6 +72,8 @@ div img {
 #container-de-descricao {
     background-color: #2274a5;
     color: white;
+    height: 300px;
+    padding-top: 203px;
 }
 
 #container-de-descricao>ol {
