--- a/modulo1/css-bugfixes/index.css
+++ b/modulo1/css-bugfixes/index.css
@@ -104,6 +104,7 @@ div:last-child {
 
 table {
     width: 60%;
+    margin: 0 450px;
 }
 
 td button {
@@ -128,6 +129,7 @@ td button {
     border-radius: 5px;
     font-size: 10px;
     color: black;
+    margin: 200px 900px;
 }
 
 #back-button:hover {
