6. Arrumei as imagens na tabela (a jeans aparenta estar bugada mesmo assim)

--- a/modulo1/css-bugfixes/index.css
+++ b/modulo1/css-bugfixes/index.css
@@ -135,3 +135,9 @@ td button {
 #back-button:hover {
     background-color: #635a3d
 }
+
+#tabela img {
+    width: 60px;
+    height: 60px;
+    display: block;
+}
