--- a/modulo1/css-bugfixes/index.css
+++ b/modulo1/css-bugfixes/index.css
@@ -126,6 +126,10 @@ td button:active{
     height: 100px;
 }
 
+div > input {
+    border: none;
+    border-bottom: 2px solid black;
+}
 
 #back-button {
     background-color: white;
