11. Centralizei a tabela com margin-left e right

--- a/modulo1/css-bugfixes/index.css
+++ b/modulo1/css-bugfixes/index.css
@@ -103,8 +103,9 @@ div:last-child {
 }
 
 table {
-    width: 60%;
-    margin: 0 450px;
+    width: 70%;
+    margin-left: 450px;
+    margin-right: auto;
 }
 
 td button {
