--- a/modulo1/flex-grid/index.css
+++ b/modulo1/flex-grid/index.css
@@ -22,105 +22,84 @@ header {
 .img-logo {
   width: 20px;
   height: 20px;
-
 }
 .titulo-maior {
   padding: 10px;
 }
 button {
-margin-left: 85vw;
+  margin-left: 85vw;
 }
 
-
 main {
-    background-color: white;
-    flex-grow: 1;
-    display: flex;
-    width: 100%;
-    
+  background-color: white;
+  flex-grow: 1;
+  display: flex;
+  width: 100%;
 }
 
 footer {
-    background-color: mediumvioletred;
-    height: 5vh;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-    font-size: large;
-    font-weight: bold;
+  background-color: mediumvioletred;
+  height: 5vh;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  font-size: large;
+  font-weight: bold;
 }
+
+.conteudo {
+  display: flex;
+  background-color: white;
+  flex-grow: 2;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+}
+
+.bolo {
+  width: 300px;
+  height: 300px;
+}
+
+.box {
+  height: 42vh;
+  width: 300px;
+  box-shadow: 1em 0 1em darkgray;
+  margin-top: 10px;
+  margin-left: 1vw;
+  margin-right: 2vw;
+}
+
+h2 {
+  text-align: center;
+  font-weight: bold;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  padding-top: 5px;
+}
+
+p {
+  text-align: center;
+  font-weight: bold;
+  padding-top: 40px;
+  font-size: large;
+}
+
 section {
-    display: grid;
-    background-color: #f2d0e0;
-    width: 40vw;
-    height:100%;
-
-    
-}.conteudo {
-    display: flex;
-    background-color: white;
-    flex-grow: 2;
-    flex-flow: row wrap;
-    justify-content: flex-start;}
-
-.bolo{
-    width: 300px;
-    height: 300px;
+  background-color: #f2d0e0;
+  width: 40vw;
+  height: 100%;
+  display: flex;
+  align-items:center;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 40px;
+}
+.menu-bar img {
+  width: 20px;
 }
 
-.box{
-    height: 42vh;
-    width: 300px;
-    box-shadow: 1em 0 1em darkgray ;
-    margin-top: 10px;
-    margin-left: 1vw;
-    margin-right: 2vw;
-
-}
-
-h2{
-    text-align: center;
-    font-weight: bold;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    padding-top: 5px;
-}
-
-p{
-    text-align: center;
-    font-weight: bold;
-    padding-top: 40px;
-    font-size: large;
-}
-
-.home img {
-    width: 20px;
-    height: 20px;
-grid-column-start: 1;
-grid-column-end: 1;
-grid-row-start: 1;
-}
-
-.produtos img{
-    width: 20px;
-    height: 20px;
-}
-
-.carrinho img{
-    width: 20px;
-    height: 20px;
-}
-
-.perfil img{
-    width: 20px;
-     height: 20px;
-}
-
-h3 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-
+.seta{
+  margin-left: 240px;
+  margin-top: 20px;
 }
