--- a/modulo1/css-labetube/index.css
+++ b/modulo1/css-labetube/index.css
@@ -1,3 +1,95 @@
+@media screen and (min-device-width: 100px) and (max-device-width:1099px) {
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  header {
+    text-align: left;
+    background-color: #ff2400;
+    color: black;
+    font-size: 2vw;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 8vh;
+    width: 100vw;
+  }
+  .titulo {
+    margin-left: 2vw;
+  }
+  
+  .barra-busca {
+    height: 30%;
+    width: 20%;
+    align-self: center;
+    margin-right: 2vw;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    background-color: white;
+    opacity: 0.6;
+    border-bottom: 2px solid black;
+  }
+  
+  footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100vw;
+    min-height: 3vh;
+    background-color: #ff2400;
+    color: black;
+    text-align: center;
+  
+  }
+  .thumb {
+    width: 90vw;
+    height: 25vh;
+    padding: -1vh;
+  }
+  .box {
+    height: 32vh;
+    width: 90vw;
+    margin-top: 3vh;
+    margin-left: 1vw;
+    margin-right: 1vw;
+    margin-bottom: 5vh;
+    box-shadow: 5px 5px 5px darkgray;
+    background-color: #ff2400;
+    transition: transform .2s;
+    display: block;
+  }
+  .box:hover{
+    transform: scale(1.1);
+}
+
+.conteudo {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+}
+
+.conteudo text{
+    display: flex;
+    align-self: center;
+    justify-content: center;
+
+}
+h2{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    padding-top: 1.5vh;
+    color: white;
+    font-size: 5vw;
+}
+}
+
+
+
+@media screen and (min-device-width:1100px){
 * {
   margin: 0;
   padding: 0;
@@ -8,20 +100,22 @@ header {
   text-align: left;
   background-color: #ff2400;
   color: black;
-  font-size: 30px;
+  font-size: 2vw;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 10vh;
+  height: 8vh;
+  width: 100vw;
 }
 .titulo {
-  margin-left: 40px;
+  margin-left: 2vw;
 }
 
 .barra-busca {
-  height: 30px;
+  height: 30%;
+  width: 20%;
   align-self: center;
-  margin-right: 80px;
+  margin-right: 2vw;
   border-top: none;
   border-left: none;
   border-right: none;
@@ -34,11 +128,12 @@ footer {
   position: fixed;
   left: 0;
   bottom: 0;
-  width: 100%;
-  height: 4vh;
+  width: 100vw;
+  min-height: 5vh;
   background-color: #ff2400;
   color: black;
   text-align: center;
+
 }
 
 main{
@@ -47,24 +142,26 @@ main{
   display: flex;
   width: 100%;
   height: 86vh;
+  flex-wrap: wrap;
 
 }
 
 .thumb {
-  width: 450px;
-  height: 300px;
-  padding: -10px;
+  width: 20vw;
+  height: 20vh;
+  padding: -1vh;
 }
 
 .box {
-  height: 35vh;
-  width: 450px;
-  margin-top: 40px;
-  margin-left: 5px;
-  margin-right: 5px;
+  height: 28vh;
+  width: 20vw;
+  margin-top: 7vh;
+  margin-left: 1vw;
+  margin-right: 1vw;
   box-shadow: 5px 5px 5px darkgray;
   background-color: #ff2400;
   transition: transform .2s;
+  display: block;
 }
 
 .box:hover{
@@ -87,8 +184,8 @@ h2{
     display: flex;
     align-content: center;
     justify-content: center;
-    padding-top: 15px;
+    padding-top: 1.5vh;
     color: white;
+    font-size: 2vw;
 }
-
-
+}
