--- a/modulo1/css-labetube/videos.css
+++ b/modulo1/css-labetube/videos.css
@@ -7,21 +7,23 @@
 header {
   text-align: left;
   background-color: black;
-  color: white;
-  font-size: 30px;
+  color: black;
+  font-size: 2vw;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 10vh;
+  height: 8vh;
+  width: 100vw;
 }
 .titulo {
-  margin-left: 40px;
+  margin-left: 2vw;
 }
 
 .barra-busca {
-  height: 30px;
+  height: 30%;
+  width: 20%;
   align-self: center;
-  margin-right: 80px;
+  margin-right: 2vw;
   border-top: none;
   border-left: none;
   border-right: none;
@@ -34,11 +36,12 @@ footer {
   position: fixed;
   left: 0;
   bottom: 0;
-  width: 100%;
-  height: 4vh;
+  width: 100vw;
+  min-height: 5vh;
   background-color: black;
   color: white;
   text-align: center;
+
 }
 
 main {
@@ -49,3 +52,11 @@ main {
 
 p{
     font-weight: bolder;}
+
+video{
+  width: 80vw;
+  height: 80vh;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
